# llm-local

./: 01-vllm-driver.py  1-extract-pdf.py  10-ollama.py  2-chunk-build.py  21-extract-pdf.py  24-chunk.py  26-query-rag.py  31-make-training.py  33-fine-tune.py  35-compare-models.py  README.md  download.sh  pyproject.toml
data/: kenya-expert.model  metab_training.tsv  scott_ft_model.model
